style: Fix Auth switch button alignment

--- a/client/src/pages/auth/Auth.module.css
+++ b/client/src/pages/auth/Auth.module.css
@@ -82,6 +82,7 @@
   width: 30%;
   padding: .5rem 1rem;
   align-self: center;
+  margin-left: 1rem;
 }
 
 @media only screen and (min-width: 990px) {
